--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <!--===== SCROLL REVEAL =====-->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <title>Zulfiqar Shaikh</title>
+    <title>My Portfolio</title>
   </head>
   <body>
 
@@ -63,7 +63,7 @@
       <section class="home bd-grid section" id="home">
         <div class="home-data">
           <h2 class="home-title">
-            Hy! 👋, I Am<br /> <span class="home-title-color Baloo">Zulfiqar Shaikh</span><br />
+            Hy! 👋, I Am<br /> <span class="home-title-color Baloo">Shahirul Aiman</span><br />
             <span class="animate-charcter">Full Stack Developer</span>
           </h2>
 
@@ -118,7 +118,7 @@ functionality. My mission is to build user-friendly, efficient, and secure web a
             </p>
             <br />
             <p>
-              Drop a mail @ zulfiqarshaikhofficial92@gmail.com
+              Drop a mail @ shahirulaiman@hotmail.com
               <i
                 style="color: #4070f4; font-size: 1.2rem; cursor: pointer"
                 class="bx bx-copy"
