--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           /></a>          
         </div>
         <div class="welcome-container">
-          <h1 class="Middle-Head">ZSK</h1>
+          <h1 class="Middle-Head">Shahirul Aiman</h1>
         </div>
         
         <div class="nav-menu" id="nav-menu">
