--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
           ></a>
         </div>
 
+        -->
         <div class="home-img">
           <img
             src="assets/img/Scrollimg.png"
-            alt="myzulfiqarIMG"
+            alt="Img"
             class="myimage"
           />
         </div>
-        -->
       </section>
 
       <!--===== ABOUT =====-->
