--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
           </h2>
 
           <a
-            href="/pdf/ZulfiqarResume.pdf"
+            href="/pdf/resume_diploma.pdf"
             target="_blank"
             class="button"
-            >Resume</a
+            >Download Resume</a
           >
         </div>
 <!--
