--- a/index.html
+++ b/index.html
@@ -227,6 +227,36 @@ functionality. My mission is to build user-friendly, efficient, and secure web a
            
           </div>
 
+          <div>
+            <h2 class="skills-subtitle">Version Controls Skills</h2>
+            <div class="skills-data">
+              <div class="skills-names">
+                <img class="skills-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/120px-GitHub_Invertocat_Logo.svg.png?20230417032619" alt="" />
+                <span class="skills-name">Github</span>
+              </div>
+              <!-- <div class="skills-bar skills-node"></div> -->
+              <!-- <div>
+                <span class="skills-percentage">85%</span>
+              </div> -->
+            </div>
+            <div class="skills-data">
+              <div class="skills-names">
+                <img class="skills-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/GitLab_icon.svg/623px-GitLab_icon.svg.png?20220627020840" alt="" />
+                <span class="skills-name">Gitlab</span>
+              </div>
+              <!-- <div class="skills-bar skills-sql"></div> -->
+              <!-- <div>
+                <span class="skills-percentage">65%</span>
+              </div> -->
+            </div>
+              <!-- <div class="skills-bar skills-sql"></div> -->
+              <!-- <div>
+                <span class="skills-percentage">65%</span>
+              </div> -->
+            </div>
+           
+          </div>
+
           <!-- <div>
             <img src="assets/img/project3.jpg" alt="" class="skills-img" />
           </div> -->
